--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -2,14 +2,18 @@
   name = "github.com/satori/go.uuid"
   version = "1.2.0"
 
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.0.5"
+
+[[constraint]]
+  name = "github.com/tendermint/iavl"
+  version = "0.9.2"
+
 [[override]]
   name = "github.com/tendermint/tendermint"
   version = "0.22.8"
 
-[[override]]
-  name = "github.com/tendermint/iavl"
-  version = "0.9.2"
-  
 [prune]
   go-tests = true
   unused-packages = true
